# rust_disel

docker/mysql/: auto.cnf  public_key.pem
docker/mysql/diesel_demo/: __diesel_schema_migrations.frm  users.frm  users.ibd
docker/mysql/mysql/: columns_priv.MYI  engine_cost.ibd  event.MYI  func.MYI  help_category.ibd  innodb_table_stats.ibd  proc.MYI  proxies_priv.MYI  server_cost.ibd  tables_priv.MYD  tables_priv.MYI  time_zone.ibd  time_zone_name.ibd  user.MYD  user.MYI
docker/mysql/sys/: host_summary_by_file_io_type.frm  host_summary_by_statement_latency.frm  host_summary_by_statement_type.frm  innodb_buffer_stats_by_table.frm  io_by_thread_by_latency.frm  io_global_by_file_by_latency.frm  io_global_by_wait_by_bytes.frm  memory_by_host_by_current_bytes.frm  memory_by_user_by_current_bytes.frm  metrics.frm  ps_check_lost_instrumentation.frm  schema_object_overview.frm  session_ssl_status.frm  statements_with_errors_or_warnings.frm  statements_with_sorting.frm  statements_with_temp_tables.frm  user_summary.frm  user_summary_by_file_io_type.frm  version.frm  wait_classes_global_by_latency.frm  waits_by_host_by_latency.frm  x@0024host_summary.frm  (+21 more)
doker/: docker-compose.yml
doker/mysql/: ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  server-cert.pem  server-key.pem
doker/rust/: Dockerfile
doker/rust_sapmle/: .env  Cargo.toml
doker/rust_sapmle/migrations/2021-06-09-025039_rust_mysql_init/: down.sql  up.sql
doker/rust_sapmle/migrations/2021-06-09-032501_rust_mysql/: up.sql
doker/rust_sapmle/migrations/src/: schema.rs
(+70 files in other folders)
