[package]
name = "rust_sapmle"
version = "0.1.0"
authors = ["kouheiadachi <kohei.adachi@blueish.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.0", features = ["mysql"] }
dotenv = "0.9.0